# abmodel-backend

./: .env.example  .gitignore  .python-version  Dockerfile.dev  README.MD  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0821cd9f8195_remove_title_of_the_content_entity.py  0fef6c667dac_add_contents_table.py  10d2dc75342d_add_tables_user_and_specializacion_area.py  78c67a9e2b0d_add_units_an_contents.py  adaf0887295d_add_title_to_content_table.py  b4f5504a7746_initial_migration.py
app/: __init__.py  env.py
app/api/: main.py
app/api/dependencies/: api_security_service.py  api_signin.py  api_signup.py  contents_use_cases.py  course_use_cases.py  get_db.py  jwt.py  sqlalchemy_repo_dep.py  units_use_cases.py  upload_image_use_case.py
app/api/dependencies/specializations/: __init__.py
app/api/infrastructure/cloudinary_adapter/: __init__.py
app/api/infrastructure/sqlalchemy_repositories/: course_repository.py
app/api/routes/: __init__.py  authorizations.py  content_routes.py  course_routes.py  multimedia_routes.py  unit_routes.py  user_routes.py
app/core/adapters/: images_storage.py
app/core/domain/: __init__.py  content.py  content_view.py  course.py  registration.py  token_types.py  unit.py  user.py
app/core/domain/repository/: __init__.py
app/core/use_cases/auth/: __init__.py  security_service.py  signin.py  signup.py
app/core/use_cases/contents/: crud.py
app/core/use_cases/courses/: crud.py  upload_image.py
app/core/use_cases/specializations/: __init__.py
app/core/use_cases/units/: crud.py
app/databases/sqlalchemy_connection/: __init__.py  respository.py  session.py
app/databases/sqlalchemy_connection/models/: __init__.py  (+4 more)
(+4 files in other folders)
